@@ -1,17 +1,11 @@
 package org.avni.server.service;
 
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.time.LocalTime;
-import java.time.format.DateTimeParseException;
-
 import com.amazonaws.HttpMethod;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.avni.server.application.FormElement;
 import org.avni.server.application.FormMapping;
 import org.avni.server.application.KeyType;
 import org.avni.server.common.EnhancedValidationDTO;
-import org.avni.server.common.ValidationResult;
 import org.avni.server.dao.AddressLevelTypeRepository;
 import org.avni.server.dao.ConceptRepository;
 import org.avni.server.dao.IndividualRepository;
@@ -21,22 +15,23 @@ import org.avni.server.domain.observation.PhoneNumberObservationValue;
 import org.avni.server.util.*;
 import org.avni.server.web.request.ObservationRequest;
 import org.avni.server.web.request.rules.RulesContractWrapper.Decision;
-import org.avni.server.web.validation.ValidationException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.time.LocalTime;
+import java.time.format.DateTimeParseException;
 import java.util.*;
 import java.util.stream.Collectors;
 
 import static org.avni.messaging.domain.Constants.DURATION_PATTERN;
 
 @Service("EnhancedValidationService")
-@ConditionalOnProperty(value = "avni.enhancedValidation.enabled", havingValue = "true")
 public class EnhancedValidationService {
     public static final boolean INCLUDE_VOIDED_FORM_ELEMENTS = true;
+    private static final Logger logger = LoggerFactory.getLogger(EnhancedValidationService.class);
     private final FormMappingService formMappingService;
     private final OrganisationConfigService organisationConfigService;
     private final BugsnagReporter bugsnagReporter;
@@ -44,7 +39,6 @@ public class EnhancedValidationService {
     private final SubjectTypeRepository subjectTypeRepository;
     private final IndividualRepository individualRepository;
     private final AddressLevelTypeRepository addressLevelTypeRepository;
-    private final Logger logger;
     private final ObjectMapper objectMapper;
     private final S3Service s3Service;
 
@@ -57,248 +51,236 @@ public class EnhancedValidationService {
         this.individualRepository = individualRepository;
         this.addressLevelTypeRepository = addressLevelTypeRepository;
         this.s3Service = s3Service;
-        this.logger = LoggerFactory.getLogger(this.getClass());
         this.objectMapper = ObjectMapperSingleton.getObjectMapper();
     }
 
-    public ValidationResult validateObservationsAndDecisionsAgainstFormMapping(List<ObservationRequest> observationRequests, List<Decision> decisions, FormMapping formMapping) {
-        LinkedHashMap<String, FormElement> entityConceptMap = formMappingService.getEntityConceptMap(formMapping, INCLUDE_VOIDED_FORM_ELEMENTS);
+    public void validateObservationsAndDecisionsAgainstFormMapping(List<ObservationRequest> observationRequests, List<Decision> decisions, FormMapping formMapping) throws ValidationException {
+        List<String> errorMessages = new ArrayList<>();
+        LinkedHashMap<String, FormElement> formElements = formMappingService.getEntityConceptMap(formMapping, INCLUDE_VOIDED_FORM_ELEMENTS);
 
-        String errorMessage = checkForInvalidConceptUUIDAndNames(observationRequests, decisions, formMapping, entityConceptMap);
-        if (StringUtils.hasText(errorMessage)) return handleValidationFailure(errorMessage);
-
-        errorMessage = validateConceptValuesAreOfRequiredType(observationRequests, entityConceptMap, formMapping);
-        if (StringUtils.hasText(errorMessage)) return handleValidationFailure(errorMessage);
-
-        return ValidationResult.Success;
+        checkForInvalidConceptUUIDAndNames(observationRequests, decisions, formMapping, formElements, errorMessages);
+        validateConceptValuesAreOfRequiredType(observationRequests, formElements, formMapping, errorMessages);
+        handleValidationFailure(errorMessages);
     }
 
-    private String checkForInvalidConceptUUIDAndNames(List<ObservationRequest> observationRequests, List<Decision> decisions, FormMapping formMapping, LinkedHashMap<String, FormElement> entityConceptMap) {
+    private void checkForInvalidConceptUUIDAndNames(List<ObservationRequest> observationRequests, List<Decision> decisions, FormMapping formMapping, LinkedHashMap<String, FormElement> formElements, List<String> errorMessages) {
         List<String> conceptUuids = getObservationConceptUuidsFromRequest(observationRequests);
         conceptUuids.addAll(getDecisionConceptUuidsFromRequest(decisions));
 
         List<String> nonMatchingConceptUuids = conceptUuids
-            .stream()
-            .filter(conceptUuid -> !entityConceptMap.containsKey(conceptUuid))
-            .collect(Collectors.toList());
+                .stream()
+                .filter(conceptUuid -> !formElements.containsKey(conceptUuid))
+                .collect(Collectors.toList());
 
         if (!nonMatchingConceptUuids.isEmpty()) {
-            return String.format("Invalid concept uuids/names %s found for Form uuid/name: %s/%s", String.join(", ", nonMatchingConceptUuids), formMapping.getFormUuid(), formMapping.getFormName());
+            errorMessages.add(String.format("Invalid concept uuids/names %s found for Form uuid/name: %s/%s", String.join(", ", nonMatchingConceptUuids), formMapping.getFormUuid(), formMapping.getFormName()));
         }
-        return null;
     }
 
-    private String validateConceptValuesAreOfRequiredType(List<ObservationRequest> observationRequests, LinkedHashMap<String, FormElement> entityConceptMap, FormMapping formMapping) {
-        return observationRequests.stream()
+    private void validateConceptValuesAreOfRequiredType(List<ObservationRequest> observationRequests, LinkedHashMap<String, FormElement> formElements, FormMapping formMapping, List<String> errorMessages) {
+        observationRequests.stream()
                 .map(observationRequest -> new EnhancedValidationDTO(conceptRepository.findByUuid(observationRequest.getConceptUUID()),
-                        entityConceptMap.get(observationRequest.getConceptUUID()), observationRequest.getValue()))
-                .map(enhancedValidationDTO -> validate(enhancedValidationDTO, formMapping))
-                .filter(Objects::nonNull)
-                .collect(Collectors.joining("\n"));
+                        formElements.get(observationRequest.getConceptUUID()),
+                        observationRequest.getValue()))
+                .forEach(enhancedValidationDTO -> validate(enhancedValidationDTO, formMapping, errorMessages));
     }
 
-    public ValidationResult handleValidationFailure(String errorMessage) {
+    private void handleValidationFailure(List<String> errorMessages) throws ValidationException {
+        if (errorMessages.isEmpty()) return;
+
+        String errorMessage = String.join(", ", errorMessages);
         ValidationException validationException = new ValidationException(errorMessage);
         bugsnagReporter.logAndReportToBugsnag(validationException);
         if (organisationConfigService.isFailOnValidationErrorEnabled()) {
             throw validationException;
-        } else {
-            return ValidationResult.Failure(errorMessage);
         }
     }
 
     private List<String> getObservationConceptUuidsFromRequest(List<ObservationRequest> observationRequests) {
         List<String> conceptUuids = observationRequests
-            .stream()
-            .filter(observationRequest -> observationRequest.getConceptUUID() == null && observationRequest.getConceptName() != null)
-            .map(observationRequest -> {
-                Concept concept = conceptRepository.findByName(observationRequest.getConceptName());
-                if (concept == null) {
-                    concept = new Concept();
-                    concept.setUuid(observationRequest.getConceptName()); //hack to be able to throw unavailable concept names as error
-                } else {
-                    observationRequest.setConceptUUID(concept.getUuid()); //make uuid available for further processing to avoid name based searches
-                }
-                return concept;
-            })
-            .map(Concept::getUuid)
-            .collect(Collectors.toList());
+                .stream()
+                .filter(observationRequest -> observationRequest.getConceptUUID() == null && observationRequest.getConceptName() != null)
+                .map(observationRequest -> {
+                    Concept concept = conceptRepository.findByName(observationRequest.getConceptName());
+                    if (concept == null) {
+                        concept = new Concept();
+                        concept.setUuid(observationRequest.getConceptName()); //hack to be able to throw unavailable concept names as error
+                    } else {
+                        observationRequest.setConceptUUID(concept.getUuid()); //make uuid available for further processing to avoid name based searches
+                    }
+                    return concept;
+                })
+                .map(Concept::getUuid)
+                .collect(Collectors.toList());
         conceptUuids.addAll(observationRequests
-            .stream().map(ObservationRequest::getConceptUUID)
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList()));
+                .stream().map(ObservationRequest::getConceptUUID)
+                .filter(Objects::nonNull)
+                .toList());
 
         return conceptUuids;
     }
 
     private List<String> getDecisionConceptUuidsFromRequest(List<Decision> decisions) {
         return decisions != null ? decisions
-            .stream()
-            .map(decision -> conceptRepository.findByName(decision.getName()))
-            .map(Concept::getUuid)
-            .collect(Collectors.toList()) : new ArrayList<>();
+                .stream()
+                .map(decision -> conceptRepository.findByName(decision.getName()))
+                .map(Concept::getUuid)
+                .collect(Collectors.toList()) : new ArrayList<>();
     }
 
-    private String validate(EnhancedValidationDTO enhancedValidationDTO, FormMapping formMapping) {
+    private void validate(EnhancedValidationDTO enhancedValidationDTO, FormMapping formMapping, List<String> errorMessages) {
         Object value = enhancedValidationDTO.getValue();
         if (enhancedValidationDTO.getConcept().isQuestionGroup()) {
-            return validateQuestionGroupConcept(enhancedValidationDTO.getConcept(), enhancedValidationDTO.getFormElement(),
-                    value, formMapping);
+            validateQuestionGroupConcept(enhancedValidationDTO.getConcept(), enhancedValidationDTO.getFormElement(),
+                    value, formMapping, errorMessages);
         } else if (value instanceof Collection<?>) {
-            List<String> errorMessages = new ArrayList<>();
             ((Collection<Object>) value).forEach(vl -> {
-                String validationResult = validateAnswer(enhancedValidationDTO.getConcept(), enhancedValidationDTO.getFormElement(), vl);
-                if (validationResult != null) errorMessages.add(validationResult);
+                validateAnswer(enhancedValidationDTO.getConcept(), enhancedValidationDTO.getFormElement(), vl, errorMessages);
             });
-            if (errorMessages.isEmpty()) return null;
-
-            return String.join("\n", errorMessages);
+            if (errorMessages.isEmpty()) return;
         } else {
-            return validateAnswer(enhancedValidationDTO.getConcept(), enhancedValidationDTO.getFormElement(), value);
+            validateAnswer(enhancedValidationDTO.getConcept(), enhancedValidationDTO.getFormElement(), value, errorMessages);
         }
     }
 
-    private String validateAnswer(Concept question, FormElement formElement, Object value) {
-        if (value == null || (value instanceof String && ((String) value).trim().equals(""))) return null;
+    private void validateAnswer(Concept question, FormElement formElement, Object value, List<String> errorMessages) {
+        if (value == null || (value instanceof String && ((String) value).trim().equals(""))) return;
         switch (ConceptDataType.valueOf(question.getDataType())) {
             case Coded:
                 if (question.getConceptAnswers().stream().noneMatch(ans -> ans.getAnswerConcept().getUuid().equals(value))) {
-                    return String.format("Concept answer '%s' not found in Concept '%s'", value, question.getUuid());
+                    errorMessages.add(String.format("Concept answer '%s' not found in Concept '%s'", value, question.getUuid()));
                 }
-                return null;
+                return;
             case Numeric:
                 try {
                     Double.parseDouble(value.toString());
                 } catch (NumberFormatException numberFormatException) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             case Text:
                 try {
                     String text = (String) value;
                     if (formElement.getValidFormat() != null) {
                         if (!text.matches(formElement.getValidFormat().getRegex())) {
-                            return formatErrorMessage(question, value);
+                            errorMessages.add(formatErrorMessage(question, value));
+                            return;
                         }
                     }
                 } catch (ClassCastException classCastException) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             case Date:
             case DateTime:
                 try {
                     DateTimeUtil.parseNullableDateTime(value.toString());
                 } catch (Exception e) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             case Duration:
                 try {
-                    String duration = (String)value;
+                    String duration = (String) value;
                     if (!duration.matches(DURATION_PATTERN)) {
-                        return formatErrorMessage(question, value);
+                        errorMessages.add(formatErrorMessage(question, value));
                     }
                 } catch (ClassCastException classCastException) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             case Time:
                 try {
                     LocalTime.parse(value.toString());
                 } catch (DateTimeParseException dateTimeParseException) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             case Subject:
                 SubjectType subjectType = subjectTypeRepository.findByUuid(question.getKeyValues().get(KeyType.subjectTypeUUID).getValue().toString());
-                if (individualRepository.findByLegacyIdOrUuidAndSubjectType((String)value, subjectType) == null)
-                    return formatErrorMessage(question, value);
-                return null;
+                if (individualRepository.findByLegacyIdOrUuidAndSubjectType((String) value, subjectType) == null)
+                    errorMessages.add(formatErrorMessage(question, value));
+                return;
             case Location:
                 try {
                     List<String> lowestLevelUuids = (List<String>) question.getKeyValues().get(KeyType.lowestAddressLevelTypeUUIDs).getValue();
                     List<AddressLevelType> lowestLevels = lowestLevelUuids.stream()
-                        .map(addressLevelTypeRepository::findByUuid)
-                        .collect(Collectors.toList());
+                            .map(addressLevelTypeRepository::findByUuid)
+                            .toList();
                     if (!lowestLevels
-                        .stream()
-                        .map(AddressLevelType::getAddressLevels)
-                        .flatMap(Collection::stream)
-                        .map(AddressLevel::getUuid)
-                        .collect(Collectors.toList())
-                        .contains(value)) {
-                        return formatErrorMessage(question, value);
+                            .stream()
+                            .map(AddressLevelType::getAddressLevels)
+                            .flatMap(Collection::stream)
+                            .map(AddressLevel::getUuid)
+                            .toList()
+                            .contains(value)) {
+                        errorMessages.add(formatErrorMessage(question, value));
                     }
                 } catch (ClassCastException classCastException) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             case PhoneNumber:
                 try {
                     PhoneNumberObservationValue phoneNumber = objectMapper.convertValue(value, PhoneNumberObservationValue.class);
                     if (PhoneNumberUtil.isValidPhoneNumber(phoneNumber.getPhoneNumber(), RegionUtil.getCurrentUserRegion())) {
-                        return formatErrorMessage(question, value);
+                        errorMessages.add(formatErrorMessage(question, value));
                     }
                 } catch (ClassCastException | IllegalArgumentException e) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             case Image, ImageV2:
                 try {
                     URL dummyUrl = s3Service.generateMediaUploadUrl("dummy.jpg", HttpMethod.PUT);
                     URL imageUrl = new URL(value.toString());
                     if (!Objects.equals(dummyUrl.getProtocol(), imageUrl.getProtocol()) || !Objects.equals(dummyUrl.getHost(), imageUrl.getHost())) {
-                        return formatErrorMessage(question, value);
+                        errorMessages.add(formatErrorMessage(question, value));
                     }
                 } catch (MalformedURLException malformedURLException) {
-                    return formatErrorMessage(question, value);
+                    errorMessages.add(formatErrorMessage(question, value));
                 }
-                return null;
+                return;
             default:
-                return null;
         }
     }
 
-    public String validateQuestionGroupConcept(Concept question, FormElement formElement, Object qGroupValue, FormMapping formMapping) {
-        if(qGroupValue == null) {
-            return String.format("Null value specified for question group concept name: %s, uuid:%s", question.getName(), question.getUuid());
-        } else if(formElement.isRepeatable() && !(qGroupValue instanceof Collection<?>)) {
-            return String.format("Non-repeatable qGroupValue specified for Repeatable question group concept name: %s, uuid:%s", question.getName(), question.getUuid());
-        } else if(!formElement.isRepeatable() && qGroupValue instanceof Collection<?>) {
-            return String.format("Repeatable qGroupValue specified for Non-Repeatable question group concept name: %s, uuid:%s", question.getName(), question.getUuid());
+    public void validateQuestionGroupConcept(Concept question, FormElement formElement, Object qGroupValue, FormMapping formMapping, List<String> errorMessages) {
+        if (qGroupValue == null) {
+            errorMessages.add(String.format("Null value specified for question group concept name: %s, uuid:%s", question.getName(), question.getUuid()));
+        } else if (formElement.isRepeatable() && !(qGroupValue instanceof Collection<?>)) {
+            errorMessages.add(String.format("Non-repeatable qGroupValue specified for Repeatable question group concept name: %s, uuid:%s", question.getName(), question.getUuid()));
+        } else if (!formElement.isRepeatable() && qGroupValue instanceof Collection<?>) {
+            errorMessages.add(String.format("Repeatable qGroupValue specified for Non-Repeatable question group concept name: %s, uuid:%s", question.getName(), question.getUuid()));
         }
-        return splitQuestionGroupValueIfRequiredAndThenValidate(formElement, qGroupValue, formMapping);
+        splitQuestionGroupValueIfRequiredAndThenValidate(formElement, qGroupValue, formMapping, errorMessages);
     }
 
-    private String splitQuestionGroupValueIfRequiredAndThenValidate(FormElement formElement, Object qGroupValue, FormMapping formMapping) {
+    private void splitQuestionGroupValueIfRequiredAndThenValidate(FormElement formElement, Object qGroupValue, FormMapping formMapping, List<String> errorMessages) {
         if (qGroupValue instanceof Collection<?>) {
-            List<String> errorMessages = new ArrayList<>();
             ((Collection<Object>) qGroupValue).forEach(qGroupValueInstance -> {
-                String validationResult = validateChildObservation(formElement, (Map<String, Object>) qGroupValueInstance, formMapping);
-                if (validationResult != null) errorMessages.add(validationResult);
+                validateChildObservation(formElement, (Map<String, Object>) qGroupValueInstance, formMapping, errorMessages);
             });
-            if (errorMessages.isEmpty()) return null;
-            return String.join("\n", errorMessages);
         } else {
-            return validateChildObservation(formElement, (Map<String, Object>) qGroupValue, formMapping);
+            validateChildObservation(formElement, (Map<String, Object>) qGroupValue, formMapping, errorMessages);
         }
     }
 
-    private String validateChildObservation(FormElement questionGroupFormElement, Map<String, Object> qGroupValueInstance, FormMapping formMapping) {
-        LinkedHashMap<String, FormElement> entityConceptMap = formMappingService.getEntityConceptMapForSpecificQuestionGroupFormElement(questionGroupFormElement, formMapping, INCLUDE_VOIDED_FORM_ELEMENTS);
+    private void validateChildObservation(FormElement questionGroupFormElement, Map<String, Object> qGroupValueInstance, FormMapping formMapping, List<String> errorMessages) {
+        LinkedHashMap<String, FormElement> formElements = formMappingService.getEntityConceptMapForSpecificQuestionGroupFormElement(questionGroupFormElement, formMapping, INCLUDE_VOIDED_FORM_ELEMENTS);
         List<ObservationRequest> observationRequests = qGroupValueInstance.entrySet().stream().map(this::createObservationRequest).collect(Collectors.toList());
         List<String> nonMatchingConceptUuids = getObservationConceptUuidsFromRequest(observationRequests)
                 .stream()
-                .filter(conceptUuid -> !entityConceptMap.containsKey(conceptUuid))
+                .filter(conceptUuid -> !formElements.containsKey(conceptUuid))
                 .collect(Collectors.toList());
 
         if (!nonMatchingConceptUuids.isEmpty()) {
-            return String.format("Invalid concept uuids/names %s found for questionGroupConcept uuid/name: %s/%s", String.join(", ", nonMatchingConceptUuids),
-                    questionGroupFormElement.getConcept().getUuid(), questionGroupFormElement.getName());
+            errorMessages.add(String.format("Invalid concept uuids/names %s found for questionGroupConcept uuid/name: %s/%s", String.join(", ", nonMatchingConceptUuids),
+                    questionGroupFormElement.getConcept().getUuid(), questionGroupFormElement.getName()));
+            return;
         }
 
-        return validateConceptValuesAreOfRequiredType(observationRequests, entityConceptMap, formMapping);
+        validateConceptValuesAreOfRequiredType(observationRequests, formElements, formMapping, errorMessages);
     }
 
     private ObservationRequest createObservationRequest(Map.Entry<String, Object> stringObjectEntry) {
